# netcdf_ros

./: README.md  requirements.txt
netcdf_ros_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
netcdf_ros_msgs/srv/: GetNCData.srv  GetNCVariables.srv  GetNCVelocity.srv  SubscribeToNCServer.srv
netcdf_ros_parser/: CHANGELOG.rst  CMakeLists.txt  package.xml
netcdf_ros_parser/files/: test_data.nc
netcdf_ros_parser/launch/: playback_nc_data.launch  subscribe_vehicle.launch
netcdf_ros_parser/scripts/: example_current_velocity  example_get_nc_data  example_wind_velocity  generate_nc_test_data  nc_data_server  print_netcdf_file_info  subscribe_vehicle
netcdf_ros_parser/src/uuv_nc_parser/: nc_parser.py
